# mcp-test

./: README.md  pyproject.toml  run_server.py  setup_verify.py  test_camoufox_api.py  test_mcp_server.py
mcp_camoufox_scraper/: server.py
