[tool.poetry]
name = "mcp-camoufox-scraper"
version = "0.1.0"
description = "MCP server POC using Camoufox for web scraping with network monitoring"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "mcp_camoufox_scraper"}]
license = "MIT"
repository = "https://github.com/yourusername/mcp-camoufox-scraper"
keywords = ["mcp", "camoufox", "web-scraping", "browser-automation", "javascript-disabled"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^1.0.0"
camoufox = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
mcp-camoufox-scraper = "mcp_camoufox_scraper.server:main"
run-server = "run_server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
    ".",
]
python_files = [
    "test_*.py",
]